apps/excalidraw-is-broken/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw
  namespace: excalidraw
  annotations:
    external-dns.alpha.kubernetes.io/target: "excalidraw.lab.paultibbetts.uk"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`excalidraw.lab.paultibbetts.uk`)
      kind: Rule
      services:
        - name: excalidraw
          port: http
  tls:
    secretName: excalidraw-tls
